--- a/style.css
+++ b/style.css
@@ -4,14 +4,44 @@
 	box-sizing: border-box;
 }
 
+body {
+	text-align: center;
+	font-family: 'Barlow', sans-serif;
+}
+
+/*
+    font-family: 'Barlow', sans-serif;
+
+    font-family: 'Fraunces', serif;
+*/
+
+.colors {
+	color: hsl(7, 99%, 70%);
+	color: hsl(51, 100%, 49%);
+	color: hsl(167, 40%, 24%);
+	color: hsl(198, 62%, 26%);
+	color: hsl(168, 34%, 41%);
+}
+
+.colors1 {
+	color: hsl(212, 27%, 19%);
+	color: hsl(213, 9%, 39%);
+	color: hsl(232, 10%, 55%);
+	color: hsl(210, 4%, 67%);
+	color: hsl(0, 0%, 100%);
+}
+
 .header {
 	background-image: url(/images/desktop/image-header.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-attachment: fixed;
 	width: 100%;
 	height: 100vh;
+}
+
+.logo {
+	height: 35px;
 }
 
 .navbar {
@@ -31,6 +61,184 @@
 
 .nav-link {
 	text-decoration: none;
+	color: hsl(0, 0%, 100%);
+	font-size: 20px;
+	margin-left: 40px;
+	font-family: 'Fraunces', serif;
+}
+
+.contact {
+	background-color: hsl(0, 0%, 100%);
+	color: hsl(212, 27%, 19%);
+	padding: 13px 25px;
+	border-radius: 25px;
+	text-transform: uppercase;
+}
+
+.hamburger {
+	display: none;
+}
+
+.heading {
+	position: relative;
+	top: 60px;
+}
+
+h1 {
+	font-family: 'Fraunces', serif;
+	font-weight: 900;
+	letter-spacing: 5px;
+	font-size: 55px;
+	text-transform: uppercase;
+	color: hsl(0, 0%, 100%);
+	margin-bottom: 40px;
+}
+
+.img {
+	width: 100%;
+	height: auto;
+}
+
+.div-container1 {
+	min-height: 600px;
+	display: flex;
+	background-color: hsl(0, 0%, 100%);
+}
+
+.text-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: 40px 25px;
+}
+
+h2 {
+	font-size: 45px;
+	font-family: 'Fraunces', serif;
+	font-size: 700;
+	color: hsl(212, 27%, 19%);
+}
+
+.para {
+	font-size: 23px;
+	color: hsl(232, 10%, 55%);
+	margin: 40px;
+	line-height: 35px;
+}
+
+.learn-more {
+	font-size: 22px;
+	font-weight: 700;
+	font-family: 'Fraunces', serif;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: hsl(212, 27%, 19%);
+	z-index: 2;
+	position: relative;
+}
+
+.learn-more-link {
+	position: relative;
+}
+
+.border {
+	height: 10px;
+	width: 155px;
+	border-radius: 4px;
+	position: absolute;
+	top: 17px;
+	z-index: 0;
+}
+
+.yellow {
+	background-color: hsl(51, 100%, 49%);
+}
+
+.pink {
+	background-color: hsl(7, 99%, 70%);
+}
+
+.graphic {
+	background-image: url(/images/desktop/image-graphic-design.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 600px;
+	position: relative;
+}
+
+.photography {
+	background-image: url(/images/desktop/image-photography.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 600px;
+	position: relative;
+}
+
+.text-over-img {
+	position: absolute;
+	bottom: 60px;
+	margin: 0 30px;
+}
+
+.design,
+.photo {
+	font-size: 42px;
+	font-weight: 700;
+	font-family: 'Fraunces', serif;
+}
+
+.para1 {
+	font-size: 23px;
+	margin-top: 45px;
+	line-height: 30px;
+}
+
+.graphic-text {
+	color: hsl(167, 40%, 24%);
+}
+
+.photo-text {
+	color: hsl(198, 62%, 26%);
+}
+@media screen and (max-width: 768px) {
+	.hamburger {
+		display: block;
+		cursor: pointer;
+		height: 23px;
+	}
+
+	.nav-menu {
+		position: fixed;
+		top: 93px;
+		left: -100%;
+		flex-direction: column;
+		align-items: center;
+		background-color: white;
+		padding: 30px;
+		transition: 0.3s;
+		width: 100%;
+		z-index: 3;
+	}
+
+	.nav-menu.active {
+		left: 0;
+	}
+
+	.nav-list {
+		margin: 20px 30px 20px -10px;
+	}
+
+	.nav-link {
+		color: hsl(213, 9%, 39%);
+	}
+
+	.contact {
+		background-color: hsl(51, 100%, 49%);
+		color: hsl(212, 27%, 19%);
+	}
 }
 
 .attribution {
