--- a/style.css
+++ b/style.css
@@ -9,28 +9,6 @@ body {
 	font-family: 'Barlow', sans-serif;
 }
 
-/*
-    font-family: 'Barlow', sans-serif;
-
-    font-family: 'Fraunces', serif;
-*/
-
-.colors {
-	color: hsl(7, 99%, 70%);
-	color: hsl(51, 100%, 49%);
-	color: hsl(167, 40%, 24%);
-	color: hsl(198, 62%, 26%);
-	color: hsl(168, 34%, 41%);
-}
-
-.colors1 {
-	color: hsl(212, 27%, 19%);
-	color: hsl(213, 9%, 39%);
-	color: hsl(232, 10%, 55%);
-	color: hsl(210, 4%, 67%);
-	color: hsl(0, 0%, 100%);
-}
-
 .header {
 	background-image: url(/images/desktop/image-header.jpg);
 	background-position: center;
@@ -55,7 +33,9 @@ body {
 	display: flex;
 }
 
-.nav-list {
+.nav-list,
+.footer-nav-list,
+.social-nav-list {
 	list-style-type: none;
 }
 
@@ -99,18 +79,20 @@ h1 {
 	height: auto;
 }
 
-.div-container1 {
-	min-height: 600px;
+.flex-container {
 	display: flex;
-	background-color: hsl(0, 0%, 100%);
+	flex-direction: column;
+}
+
+.text-div {
+	height: 600px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .text-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin: 40px 25px;
+	padding: 50px 30px;
 }
 
 h2 {
@@ -203,7 +185,115 @@ h2 {
 .photo-text {
 	color: hsl(198, 62%, 26%);
 }
-@media screen and (max-width: 768px) {
+
+.client-section {
+	height: 100vh;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+
+.client-heading {
+	font-size: 25px;
+	font-weight: 700;
+	color: hsl(210, 4%, 67%);
+	margin: 80px 0;
+	letter-spacing: 7px;
+	text-transform: uppercase;
+	font-family: 'Fraunces', serif;
+}
+
+.clients-img {
+	border-radius: 50%;
+	height: 100px;
+}
+
+.testimonial {
+	font-size: 23px;
+	color: hsl(213, 9%, 39%);
+	margin: 50px 0;
+	line-height: 35px;
+}
+
+.client-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	flex-direction: row;
+}
+
+.client-name {
+	color: hsl(212, 27%, 19%);
+	font-family: 'Fraunces', serif;
+	font-size: 23px;
+	font-weight: 900;
+	margin-bottom: 17px;
+}
+
+.client-occupation {
+	font-size: 20px;
+	color: hsl(210, 4%, 67%);
+}
+
+.client {
+	margin: 0 20px 100px 20px;
+}
+
+.gallery-img {
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
+.gallery-container {
+	display: flex;
+	width: 100%;
+}
+
+.gallery {
+	display: flex;
+}
+
+footer {
+	background-color: hsl(168, 36%, 51%);
+	color: hsl(167, 40%, 24%);
+}
+
+.footer-logo {
+	padding-top: 40px;
+	font-size: 35px;
+}
+
+.footer-nav-menu,
+.social-nav-menu {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 40px 0;
+}
+
+.footer-nav-link,
+.social-nav-link {
+	margin: 0 20px;
+}
+
+.footer-nav-link {
+	text-decoration: none;
+	font-size: 23px;
+	color: hsl(168, 34%, 41%);
+}
+
+.attribution {
+	font-size: 11px;
+	text-align: center;
+}
+.attribution a {
+	color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (max-width: 768px) {
 	.hamburger {
 		display: block;
 		cursor: pointer;
@@ -239,12 +329,4 @@ h2 {
 		background-color: hsl(51, 100%, 49%);
 		color: hsl(212, 27%, 19%);
 	}
-}
-
-.attribution {
-	font-size: 11px;
-	text-align: center;
-}
-.attribution a {
-	color: hsl(228, 45%, 44%);
 }
